--- a/index.html
+++ b/index.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML</title>
+    <style>
+
+      .colors{
+        color:black;
+        background-color: yellow;
+      }
+      .four{
+        color:red;
+        background-color: gray;
+      }
+      #uniq{
+        color: fuchsia;
+        background-color: black;
+      }
+      h2,
+      h3{
+        color: brown;
+        background-color:aqua;
+      }
+      .center{
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
+
+    <h3 class="center" style="color: blueviolet; background-color: antiquewhite; text-align: right;">title 1</h3>
+    <h3 class="colors center">title 2</h3>
+    <h3 id="uniq" class="center colors">title 3</h3>
+    <h3 class="colors four">title 4</h3>
+    <h3>title 5</h3>
+
+
     <!-- header{this is header}+main+footer{footer} -->
     <header>
       <nav>
@@ -35,7 +66,7 @@
     <main>
       <!-- article*5>(h2{article title number $}+p*3>lorem40) -->
       <!-- article#article_title_number_$*5>(h2{article title number $}+p*3>lorem40) -->
-      <article id="article_title_number_1">
+      <article  id="article_title_number_1">
         <h2>article title number 1</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, architecto maiores? Non, voluptas doloribus fugiat totam, molestias dolores minus et minima amet, quo iusto natus ducimus repellat vel nobis vitae voluptate optio ab eaque. Sequi vel delectus libero saepe! Reprehenderit.</p>
         <p>Sequi accusantium incidunt non. Neque tempore ab tempora, ducimus iure quos cumque unde minima consequatur deserunt non eum sed iusto delectus aut beatae, porro enim placeat magnam at tenetur quia repudiandae. Excepturi quae alias vitae commodi rem, recusandae eum corrupti.</p>
