Add style.css & example atoms class

--- a/index.html
+++ b/index.html
@@ -4,40 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML</title>
-    <style>
-
-      .colors{
-        color:black;
-        background-color: yellow;
-      }
-      .four{
-        color:red;
-        background-color: gray;
-      }
-      #uniq{
-        color: fuchsia;
-        background-color: black;
-      }
-      h2,
-      h3{
-        color: brown;
-        background-color:aqua;
-      }
-      .center{
-        text-align: center;
-      }
-    </style>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-
-    <h3 class="center" style="color: blueviolet; background-color: antiquewhite; text-align: right;">title 1</h3>
-    <h3 class="colors center">title 2</h3>
-    <h3 id="uniq" class="center colors">title 3</h3>
-    <h3 class="colors four">title 4</h3>
-    <h3>title 5</h3>
-
-
-    <!-- header{this is header}+main+footer{footer} -->
     <header>
       <nav>
         <ul>
@@ -64,16 +33,14 @@
       </nav>
     </aside>
     <main>
-      <!-- article*5>(h2{article title number $}+p*3>lorem40) -->
-      <!-- article#article_title_number_$*5>(h2{article title number $}+p*3>lorem40) -->
       <article  id="article_title_number_1">
-        <h2>article title number 1</h2>
+        <h2 class="center alert-color">article title number 1</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, architecto maiores? Non, voluptas doloribus fugiat totam, molestias dolores minus et minima amet, quo iusto natus ducimus repellat vel nobis vitae voluptate optio ab eaque. Sequi vel delectus libero saepe! Reprehenderit.</p>
         <p>Sequi accusantium incidunt non. Neque tempore ab tempora, ducimus iure quos cumque unde minima consequatur deserunt non eum sed iusto delectus aut beatae, porro enim placeat magnam at tenetur quia repudiandae. Excepturi quae alias vitae commodi rem, recusandae eum corrupti.</p>
         <p>Cumque rerum quae veritatis libero saepe magnam iusto nihil sed deserunt repellat, ipsum a voluptatum iste eum culpa vero, tenetur modi impedit consequuntur! Debitis officiis corporis excepturi maxime autem nisi velit ad, possimus dolor totam deserunt! Perferendis culpa in dolore?</p>
       </article>
       <article id="article_title_number_2">
-        <h2>article title number 2</h2>
+        <h2 class="center">article title number 2</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, veritatis dolor. Illum pariatur sunt adipisci amet neque corporis, ducimus debitis placeat maiores, quod ratione vitae temporibus animi nulla autem similique dolorum harum, illo enim unde. Unde ullam officiis asperiores minima!</p>
         <p>Cumque hic repellendus esse harum quibusdam. Delectus dicta, illo deserunt maxime non expedita provident quam esse, facere dolor laboriosam quidem. Numquam ratione repudiandae aliquid, veniam voluptas, molestias id ipsa ex harum odit aspernatur sapiente, hic vel fugit expedita? Incidunt, sint.</p>
         <p>Maxime minus sapiente, non cumque consequatur voluptas ea excepturi, possimus beatae tenetur ipsam placeat eligendi id recusandae dolorum magnam nihil, ratione deleniti corrupti delectus nam itaque explicabo? Reiciendis, harum nemo architecto sed tempora dignissimos labore accusamus, aliquam aspernatur totam autem.</p>
