Add example block element

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <body>
     <!-- article.main-article>h1.main-article-heading{main title}+p.main-article-content*2>lorem30 -->
     <article class="main-article">
-      <h1 class="main-article-heading">main title</h1>
+      <h1 class="main-article-heading"><span class="first-letter">m</span>ain title</h1>
       <p class="main-article-content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque commodi repudiandae odit, incidunt cum odio ea ex! <a href="#">Eos reprehenderit nulla ex sunt</a> amet numquam dignissimos distinctio. Labore sapiente nemo corporis.</p>
+      <img src="https://images.pexels.com/photos/994605/pexels-photo-994605.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="sea" class="main-article-pic">
+      <img src="./assets/images/sea.1.2496908.jpg" alt="red sea" class="main-article-pic">
       <blockquote class="main-article-blockquote initial-align">Lorem <a href="#">Eos reprehenderit nulla ex sunt</a>  ipsum dolor sit amet.</blockquote>
       <p class="main-article-content">Velit temporibus quos sequi! Explicabo fugiat sint vitae quas! Fugiat vitae odit, quod qui quas totam at fuga nobis expedita, placeat perferendis veniam nihil aut autem nostrum modi tempore eaque.</p>
     </article>
