--- a/index.html
+++ b/index.html
@@ -7,18 +7,8 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <!-- article.main-article>h1.main-article-heading{main title}+p.main-article-content*2>lorem30 -->
-    <article class="main-article">
-      <h1 class="main-article-heading"><span class="first-letter">m</span>ain title</h1>
-      <strong>inline strong 1</strong><em>inline em 1</em>
-      <div>text in div 1</div>
-      <div>text in div 2</div>
-      <em>inline em 1</em>
-      <p class="main-article-content">Lorem ipsum dolor sit, amet <strong>text in strong</strong>consectetur adipisicing elit. Neque commodi repudiandae odit, incidunt cum odio ea ex! <a href="#">Eos reprehenderit nulla ex sunt</a> amet numquam dignissimos distinctio. Labore sapiente nemo corporis.</p>
-      <img src="https://images.pexels.com/photos/994605/pexels-photo-994605.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="sea" class="main-article-pic"><strong>inline strong 1</strong><em>inline em 1</em>
-      <img src="./assets/images/sea.1.2496908.jpg" alt="red sea" class="main-article-pic">
-      <blockquote style="margin-bottom: 50px;" class="main-article-blockquote initial-align">Lorem <a href="#">Eos reprehenderit nulla ex sunt</a>  ipsum dolor sit amet.</blockquote>
-      <p style="margin-top: 10px; background-color:blueviolet;" class="main-article-content">Velit temporibus quos sequi! Explicabo fugiat sint vitae quas!  <strong>text in strong</strong> Fugiat vitae odit, quod qui quas totam at fuga nobis expedita, placeat perferendis veniam nihil aut autem nostrum modi tempore eaque.</p>
-    </article>
+    <div class="parent">
+      <div class="child">child</div>
+    </div>    
   </body>
 </html>
