--- a/index.html
+++ b/index.html
@@ -4,11 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="parent">
-      <div class="child">child</div>
-    </div>    
+    <table>
+      <caption>caption - table title</caption>
+      <thead>
+        <tr>
+          <th>title of col 1</th>
+          <th>title of col 2</th>
+          <th>title of col 3</th>
+          <th>title of col 4</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- tr*4>th{title of row $}+td*3{text of cell} -->
+        <tr>
+          <th class="heading-row">title of row 1</th>
+          <td>text of cell</td>
+          <td>text of cell</td>
+          <td>text of cell</td>
+        </tr>
+        <tr>
+          <th>title of row 2</th>
+          <td>text of cell</td>
+          <td>text of cell</td>
+          <td>text of cell</td>
+        </tr>
+        <tr>
+          <th>title of row 3</th>
+          <td>text of cell 
+            <img src="./assets/images/sea.1.2496908.jpg" alt="sea">
+          </td>
+          <td>text of cell</td>
+          <td>text of cell</td>
+        </tr>
+        <tr>
+          <th>title of row 4</th>
+          <td>text of cell</td>
+          <td>text of cell</td>
+          <td>text of cell</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <!-- tr>th*4{text} -->
+        <tr>
+          <th>total in foot</th>
+          <th>total in foot</th>
+          <th>total in foot</th>
+          <th>total in foot</th>
+        </tr>
+      </tfoot>
+    </table>
   </body>
 </html>
