Add class heading-row

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <tbody>
         <!-- tr*4>th{title of row $}+td*3{text of cell} -->
         <tr>
-          <th class="heading-row">title of row 1</th>
+          <th class="heading-row">title of row 1 class heading-row</th>
           <td>text of cell</td>
           <td>text of cell</td>
           <td>text of cell</td>
