--- a/index.html
+++ b/index.html
@@ -4,63 +4,147 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML</title>
-    <link rel="stylesheet" href="./style.css" />
+    <!-- <link rel="stylesheet" href="./style.css" /> -->
   </head>
   <body>
-    <table>
-      <caption>
-        caption - table title
-      </caption>
-      <thead>
-        <tr>
-          <th colspan="2">title of col 1</th>
-          <th colspan="2">title of col 2</th>
-          <!-- <th>title of col 3</th> -->
-          <!-- <th>title of col 4</th> -->
-        </tr>
-        <tr>
-          <th>subheading</th>
-          <th>subheading</th>
-          <th>subheading</th>
-          <th>subheading</th>
-        </tr>
-      </thead>
+    <table border="1">
       <tbody>
-        <!-- tr*4>th{title of row $}+td*3{text of cell} -->
+        <!-- 1 -->
         <tr>
-          <th>title of row 1</th>
-          <td colspan="2" rowspan="3">text of cell</td>
-          <td>text of cell</td>
-          <!-- <td>text of cell</td> -->
+          <th colspan="6">lorem</th>
+          <!-- <th>dgdf</th>
+          <th>dgdf</th>
+          <th>dgdf</th>
+          <th>dgdf</th>
+          <th>dgdf</th> -->
         </tr>
+        <!-- 2 -->
         <tr>
-          <th rowspan="3">title of row 2</th>
-          <!-- <td>text of cell</td> -->
-          <!-- <td>text of cell</td> -->
-          <td>text of cell</td>
+          <th colspan="2" rowspan="4">1.3.1</th>
+          <th colspan="3">12w16a</th>
+          <td>lorem</td>
+          <!-- <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th> -->
         </tr>
+        <!-- 3 -->
         <tr>
-          <!-- <th>title of row 3</th> -->
-          <!-- <td>text of cell</td> -->
-          <!-- <td>text of cell</td> -->
-          <td>text of cell</td>
+          <!-- <th>lorem</th>
+          <th>lorem</th> -->
+          <th colspan="3">12w17a</th>
+          <!-- <th>lorem</th>
+          <th>lorem</th> -->
+          <td>lorem</td>
         </tr>
+        <!-- 4 -->
         <tr>
-          <!-- <th>title of row 4</th> -->
-          <td>text of cell</td>
-          <td>text of cell</td>
-          <td>text of cell</td>
+          <!-- <th>lorem</th>
+          <th>lorem</th> -->
+          <th colspan="3" rowspan="2">12w19a</th>
+          <!-- <th>lorem</th>
+          <th>lorem</th> -->
+          <td>lorem</td>
+        </tr>
+        <!-- 5 -->
+        <tr>
+          <!-- <th>lorem</th>
+          <th>lorem</th> -->
+          <!-- <th>lorem</th> -->
+          <!-- <th>lorem</th> -->
+          <!-- <th>lorem</th> -->
+          <td>lorem</td>
+        </tr>
+        <!-- 6 -->
+        <tr>
+          <th colspan="2">1.7.2</th>
+          <th colspan="3">1.7</th>
+          <td>lorem</td>
+          <!-- <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th> -->
+        </tr>
+        <!-- 7 -->
+        <tr>
+          <th colspan="2" rowspan="2">1.9</th>
+          <th colspan="3">15w43a</th>
+          <td>lorem</td>
+          <!-- <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th> -->
+        </tr>
+        <!-- 8 -->
+        <tr>
+          <th colspan="3">lorem</th>
+          <td>lorem</td>
+          <!-- <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th> -->
+        </tr>
+        <!-- 9 -->
+        <tr>
+          <th colspan="2">lorem</th>
+          <th colspan="3">lorem</th>
+          <td>lorem</td>
+          <!-- <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th> -->
+        </tr>
+        <!-- 10 -->
+        <tr>
+          <th colspan="6">lorem</th>
+          <!-- <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th> -->
+        </tr>
+        <!-- 11 -->
+        <tr>
+          <th colspan="2">lorem</th>
+          <th colspan="3">lorem</th>
+          <td>lorem</td>
+          <!-- <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th> -->
+        </tr>
+        <!-- 12 -->
+        <tr>
+          <th colspan="6">lorem</th>
+          <!-- <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th> -->
+        </tr>
+        <!-- 13 -->
+        <tr>
+          <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th>
+          <td>lorem</td>
+        </tr>
+        <!-- 14 -->
+        <tr>
+          <th colspan="6">lorem</th>
+          <!-- <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th> -->
+        </tr>
+        <!-- 15 -->
+        <tr>
+          <th colspan="5">lorem</th>
+          <td>lorem</td>
+          <!-- <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th>
+          <th>lorem</th> -->
         </tr>
       </tbody>
-      <tfoot>
-        <!-- tr>th*4{text} -->
-        <tr>
-          <th>total in foot</th>
-          <th colspan="3">total in foot</th>
-          <!-- <th>total in foot</th>
-          <th>total in foot</th> -->
-        </tr>
-      </tfoot>
     </table>
   </body>
 </html>
