--- a/index.html
+++ b/index.html
@@ -4,25 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML</title>
-    <!-- <link rel="stylesheet" href="./style.css" /> -->
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <table border="1">
+
+
+    <blockquote tabindex="2">qwerty</blockquote>
+    <blockquote tabindex="1">qwerty</blockquote>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda, vel.</p>
+    <p>Minus dolor nesciunt exercitationem illum iure perferendis dolores dolore deleniti?</p>
+    <blockquote class="blq">qwerty</blockquote>
+    <p>Odio magnam ut minima ab officiis necessitatibus assumenda ducimus adipisci?</p>
+    <div><p>Lorem ipsum dolor sit amet.</p></div>
+    <p>Minus dolor nesciunt exercitationem illum iure perferendis dolores dolore deleniti?</p>
+    <blockquote>qwerty</blockquote>
+    <div><blockquote>12312313</blockquote></div>
+    <blockquote>qwerty</blockquote>
+    <p>Odio magnam ut minima ab officiis necessitatibus assumenda ducimus adipisci?</p>
+    <div><blockquote>qwewqweqewqeqqe</blockquote></div>
+
+
+
+    <ul class="list">
+      <li><h3 class="heading-cell"><a href="https://developer.mozilla.org/">mdn</a></h3></li>
+      <li><a href="https://google.com">text</a>
+        <ul>
+          <li><a href="./pages/about-us.html">about us</a></li>
+          <li><a href="./assets/images/sea.1.2496908.jpg">sea picture</a></li>
+        </ul>
+      </li>
+      <li><a href="#uniq">table</a></li>
+    </ul>
+
+    <table border="1" id="uniq">
       <tbody>
         <!-- 1 -->
         <tr>
-          <th colspan="6">lorem</th>
-          <!-- <th>dgdf</th>
-          <th>dgdf</th>
-          <th>dgdf</th>
-          <th>dgdf</th>
-          <th>dgdf</th> -->
+          <th colspan="6">
+            <h3 class="heading-cell">Lorem</h3>
+          </th>
         </tr>
         <!-- 2 -->
         <tr>
-          <th colspan="2" rowspan="4">1.3.1</th>
+          <th colspan="2" rowspan="4">
+            <h3 class="heading-cell one-line">
+              1.3.1 Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Nostrum amet debitis soluta tenetur ratione possimus veniam
+              perspiciatis unde qui maiores.
+            </h3>
+          </th>
           <th colspan="3">12w16a</th>
-          <td>lorem</td>
+          <td class="btn">lorem</td>
           <!-- <th>lorem</th>
           <th>lorem</th>
           <th>lorem</th> -->
