Add example position

--- a/index.html
+++ b/index.html
@@ -8,175 +8,16 @@
   </head>
   <body>
 
+    <!-- .wrapper>.parent>.child*4{$} -->
 
-    <blockquote tabindex="2">qwerty</blockquote>
-    <blockquote tabindex="1">qwerty</blockquote>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda, vel.</p>
-    <p>Minus dolor nesciunt exercitationem illum iure perferendis dolores dolore deleniti?</p>
-    <blockquote class="blq">qwerty</blockquote>
-    <p>Odio magnam ut minima ab officiis necessitatibus assumenda ducimus adipisci?</p>
-    <div><p>Lorem ipsum dolor sit amet.</p></div>
-    <p>Minus dolor nesciunt exercitationem illum iure perferendis dolores dolore deleniti?</p>
-    <blockquote>qwerty</blockquote>
-    <div><blockquote>12312313</blockquote></div>
-    <blockquote>qwerty</blockquote>
-    <p>Odio magnam ut minima ab officiis necessitatibus assumenda ducimus adipisci?</p>
-    <div><blockquote>qwewqweqewqeqqe</blockquote></div>
+    <div class="wrapper">
+      <div class="parent">
+        <div class="absolute">1 a</div>
+        <div class="child">2</div>
+        <div class="child">3</div>
+        <div class="child">4</div>
+      </div>
+    </div>
 
-
-
-    <ul class="list">
-      <li><h3 class="heading-cell"><a href="https://developer.mozilla.org/">mdn</a></h3></li>
-      <li><a href="https://google.com">text</a>
-        <ul>
-          <li><a href="./pages/about-us.html">about us</a></li>
-          <li><a href="./assets/images/sea.1.2496908.jpg">sea picture</a></li>
-        </ul>
-      </li>
-      <li><a href="#uniq">table</a></li>
-    </ul>
-
-    <table border="1" id="uniq">
-      <tbody>
-        <!-- 1 -->
-        <tr>
-          <th colspan="6">
-            <h3 class="heading-cell">Lorem</h3>
-          </th>
-        </tr>
-        <!-- 2 -->
-        <tr>
-          <th colspan="2" rowspan="4">
-            <h3 class="heading-cell one-line">
-              1.3.1 Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Nostrum amet debitis soluta tenetur ratione possimus veniam
-              perspiciatis unde qui maiores.
-            </h3>
-          </th>
-          <th colspan="3">12w16a</th>
-          <td class="btn">lorem</td>
-          <!-- <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th> -->
-        </tr>
-        <!-- 3 -->
-        <tr>
-          <!-- <th>lorem</th>
-          <th>lorem</th> -->
-          <th colspan="3">12w17a</th>
-          <!-- <th>lorem</th>
-          <th>lorem</th> -->
-          <td>lorem</td>
-        </tr>
-        <!-- 4 -->
-        <tr>
-          <!-- <th>lorem</th>
-          <th>lorem</th> -->
-          <th colspan="3" rowspan="2">12w19a</th>
-          <!-- <th>lorem</th>
-          <th>lorem</th> -->
-          <td>lorem</td>
-        </tr>
-        <!-- 5 -->
-        <tr>
-          <!-- <th>lorem</th>
-          <th>lorem</th> -->
-          <!-- <th>lorem</th> -->
-          <!-- <th>lorem</th> -->
-          <!-- <th>lorem</th> -->
-          <td>lorem</td>
-        </tr>
-        <!-- 6 -->
-        <tr>
-          <th colspan="2">1.7.2</th>
-          <th colspan="3">1.7</th>
-          <td>lorem</td>
-          <!-- <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th> -->
-        </tr>
-        <!-- 7 -->
-        <tr>
-          <th colspan="2" rowspan="2">1.9</th>
-          <th colspan="3">15w43a</th>
-          <td>lorem</td>
-          <!-- <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th> -->
-        </tr>
-        <!-- 8 -->
-        <tr>
-          <th colspan="3">lorem</th>
-          <td>lorem</td>
-          <!-- <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th> -->
-        </tr>
-        <!-- 9 -->
-        <tr>
-          <th colspan="2">lorem</th>
-          <th colspan="3">lorem</th>
-          <td>lorem</td>
-          <!-- <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th> -->
-        </tr>
-        <!-- 10 -->
-        <tr>
-          <th colspan="6">lorem</th>
-          <!-- <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th> -->
-        </tr>
-        <!-- 11 -->
-        <tr>
-          <th colspan="2">lorem</th>
-          <th colspan="3">lorem</th>
-          <td>lorem</td>
-          <!-- <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th> -->
-        </tr>
-        <!-- 12 -->
-        <tr>
-          <th colspan="6">lorem</th>
-          <!-- <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th> -->
-        </tr>
-        <!-- 13 -->
-        <tr>
-          <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th>
-          <td>lorem</td>
-        </tr>
-        <!-- 14 -->
-        <tr>
-          <th colspan="6">lorem</th>
-          <!-- <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th> -->
-        </tr>
-        <!-- 15 -->
-        <tr>
-          <th colspan="5">lorem</th>
-          <td>lorem</td>
-          <!-- <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th>
-          <th>lorem</th> -->
-        </tr>
-      </tbody>
-    </table>
   </body>
 </html>
