Add example menu

--- a/index.html
+++ b/index.html
@@ -7,11 +7,155 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <!-- header>nav>ul.menu>li.menu-item*4>a.menu-link{link $} -->
+    <header>
+      <nav>
+        <ul class="menu">
+          <li class="menu-item">
+            <a href="" class="menu-link">link werewr 1</a>
+          </li>
+          <li class="menu-item">
+            <a href="" class="menu-link">lisdgfsdnk 2</a>
+            <!-- ul.submenu>li.submenu-item*5>a.submenu-link{text sub menu $} -->
+            <ul class="submenu">
+              <li class="submenu-item">
+                <a href="" class="submenu-link">text sub menu 1</a>
+              </li>
+              <li class="submenu-item">
+                <a href="" class="submenu-link">text sub menu 2</a>
+              </li>
+              <li class="submenu-item">
+                <a href="" class="submenu-link">text sub menu 3</a>
+                <ul class="submenu">
+                  <li class="submenu-item">
+                    <a href="" class="submenu-link">text sub menu 1</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="" class="submenu-link">text sub menu 2</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="" class="submenu-link">text sub menu 3</a>
+                    <ul class="submenu">
+                      <li class="submenu-item">
+                        <a href="" class="submenu-link">text sub menu 1</a>
+                      </li>
+                      <li class="submenu-item">
+                        <a href="" class="submenu-link">text sub menu 2</a>
+                      </li>
+                      <li class="submenu-item">
+                        <a href="" class="submenu-link">text sub menu 3</a>
+                      </li>
+                      <li class="submenu-item">
+                        <a href="" class="submenu-link">text sub menu 4</a>
+                      </li>
+                      <li class="submenu-item">
+                        <a href="" class="submenu-link">text sub menu 5</a>
+                      </li>
+                    </ul><ul class="submenu">
+                      <li class="submenu-item">
+                        <a href="" class="submenu-link">text sub menu 1</a>
+                      </li>
+                      <li class="submenu-item">
+                        <a href="" class="submenu-link">text sub menu 2</a>
+                      </li>
+                      <li class="submenu-item">
+                        <a href="" class="submenu-link">text sub menu 3</a>
+                      </li>
+                      <li class="submenu-item">
+                        <a href="" class="submenu-link">text sub menu 4</a>
+                      </li>
+                      <li class="submenu-item">
+                        <a href="" class="submenu-link">text sub menu 5</a>
+                      </li>
+                    </ul><ul class="submenu">
+                      <li class="submenu-item">
+                        <a href="" class="submenu-link">text sub menu 1</a>
+                      </li>
+                      <li class="submenu-item">
+                        <a href="" class="submenu-link">text sub menu 2</a>
+                      </li>
+                      <li class="submenu-item">
+                        <a href="" class="submenu-link">text sub menu 3</a>
+                      </li>
+                      <li class="submenu-item">
+                        <a href="" class="submenu-link">text sub menu 4</a>
+                      </li>
+                      <li class="submenu-item">
+                        <a href="" class="submenu-link">text sub menu 5</a>
+                      </li>
+                    </ul>
+
+                  </li>
+                  <li class="submenu-item">
+                    <a href="" class="submenu-link">text sub menu 4</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="" class="submenu-link">text sub menu 5</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="submenu-item">
+                <a href="" class="submenu-link">text sub menu 4</a>
+              </li>
+              <li class="submenu-item">
+                <a href="" class="submenu-link">text sub menu 5</a>
+              </li>
+            </ul>
+          </li>
+          <li class="menu-item"><a href="" class="menu-link">lin 3</a></li>
+          <li class="menu-item">
+            <a href="" class="menu-link">link dfg dr 4</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <!-- main>article.card>h2.card-title{title text}+p.card-content>lorem30 -->
     <main>
-      <article>
-        <h1>title</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, aliquid! Repellendus, nemo veritatis dolores laborum quam temporibus recusandae odit inventore placeat nobis blanditiis earum, qui eum, sit aliquam? Temporibus, autem. Deserunt corporis odit odio ut iste! Exercitationem, cum corporis eos, ullam itaque nam quas ratione laborum quos quae, animi delectus.</p>
-        <p>Accusamus minus soluta hic? Soluta iure deleniti magnam atque iusto aut! Quasi voluptatem quibusdam ad, aliquam praesentium amet rem molestias reprehenderit nam quidem minima, maxime quaerat eos tenetur perferendis? Alias rem velit iure libero provident ad porro quaerat eius odit esse maxime qui sit numquam, repudiandae debitis laudantium obcaecati dolorum.</p>
+      <article class="card">
+        <h2 class="card-title">title text</h2>
+        <p class="card-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quasi
+          explicabo dolores consectetur vero ut dolor ea, eos nesciunt
+          asperiores corrupti ipsum officia, repellendus beatae. Iusto, officiis
+          animi. Architecto, earum?
+        </p>
+      </article>
+      <article class="card">
+        <h2 class="card-title">title text</h2>
+        <p class="card-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quasi
+          explicabo dolores consectetur vero ut dolor ea, eos nesciunt
+          asperiores corrupti ipsum officia, repellendus beatae. Iusto, officiis
+          animi. Architecto, earum?
+        </p>
+      </article>
+      <article class="card">
+        <h2 class="card-title">title text</h2>
+        <p class="card-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quasi
+          explicabo dolores consectetur vero ut dolor ea, eos nesciunt
+          asperiores corrupti ipsum officia, repellendus beatae. Iusto, officiis
+          animi. Architecto, earum?
+        </p>
+      </article>
+      <article class="card">
+        <h2 class="card-title">title text</h2>
+        <p class="card-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quasi
+          explicabo dolores consectetur vero ut dolor ea, eos nesciunt
+          asperiores corrupti ipsum officia, repellendus beatae. Iusto, officiis
+          animi. Architecto, earum?
+        </p>
+      </article>
+      <article class="card">
+        <h2 class="card-title">title text</h2>
+        <p class="card-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quasi
+          explicabo dolores consectetur vero ut dolor ea, eos nesciunt
+          asperiores corrupti ipsum officia, repellendus beatae. Iusto, officiis
+          animi. Architecto, earum?
+        </p>
       </article>
     </main>
   </body>
