--- a/index.html
+++ b/index.html
@@ -7,156 +7,26 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <!-- header>nav>ul.menu>li.menu-item*4>a.menu-link{link $} -->
-    <header>
-      <nav>
-        <ul class="menu">
-          <li class="menu-item">
-            <a href="" class="menu-link">link werewr 1</a>
-          </li>
-          <li class="menu-item">
-            <a href="" class="menu-link">lisdgfsdnk 2</a>
-            <!-- ul.submenu>li.submenu-item*5>a.submenu-link{text sub menu $} -->
-            <ul class="submenu">
-              <li class="submenu-item">
-                <a href="" class="submenu-link">text sub menu 1</a>
-              </li>
-              <li class="submenu-item">
-                <a href="" class="submenu-link">text sub menu 2</a>
-              </li>
-              <li class="submenu-item">
-                <a href="" class="submenu-link">text sub menu 3</a>
-                <ul class="submenu">
-                  <li class="submenu-item">
-                    <a href="" class="submenu-link">text sub menu 1</a>
-                  </li>
-                  <li class="submenu-item">
-                    <a href="" class="submenu-link">text sub menu 2</a>
-                  </li>
-                  <li class="submenu-item">
-                    <a href="" class="submenu-link">text sub menu 3</a>
-                    <ul class="submenu">
-                      <li class="submenu-item">
-                        <a href="" class="submenu-link">text sub menu 1</a>
-                      </li>
-                      <li class="submenu-item">
-                        <a href="" class="submenu-link">text sub menu 2</a>
-                      </li>
-                      <li class="submenu-item">
-                        <a href="" class="submenu-link">text sub menu 3</a>
-                      </li>
-                      <li class="submenu-item">
-                        <a href="" class="submenu-link">text sub menu 4</a>
-                      </li>
-                      <li class="submenu-item">
-                        <a href="" class="submenu-link">text sub menu 5</a>
-                      </li>
-                    </ul><ul class="submenu">
-                      <li class="submenu-item">
-                        <a href="" class="submenu-link">text sub menu 1</a>
-                      </li>
-                      <li class="submenu-item">
-                        <a href="" class="submenu-link">text sub menu 2</a>
-                      </li>
-                      <li class="submenu-item">
-                        <a href="" class="submenu-link">text sub menu 3</a>
-                      </li>
-                      <li class="submenu-item">
-                        <a href="" class="submenu-link">text sub menu 4</a>
-                      </li>
-                      <li class="submenu-item">
-                        <a href="" class="submenu-link">text sub menu 5</a>
-                      </li>
-                    </ul><ul class="submenu">
-                      <li class="submenu-item">
-                        <a href="" class="submenu-link">text sub menu 1</a>
-                      </li>
-                      <li class="submenu-item">
-                        <a href="" class="submenu-link">text sub menu 2</a>
-                      </li>
-                      <li class="submenu-item">
-                        <a href="" class="submenu-link">text sub menu 3</a>
-                      </li>
-                      <li class="submenu-item">
-                        <a href="" class="submenu-link">text sub menu 4</a>
-                      </li>
-                      <li class="submenu-item">
-                        <a href="" class="submenu-link">text sub menu 5</a>
-                      </li>
-                    </ul>
+    <div class="container flex-parent">
+      <div class="item">1</div>
+      <div class="item">2 </div>
+      <div class="item">3</div>
+      <div class="item">4</div>
+    </div>
 
-                  </li>
-                  <li class="submenu-item">
-                    <a href="" class="submenu-link">text sub menu 4</a>
-                  </li>
-                  <li class="submenu-item">
-                    <a href="" class="submenu-link">text sub menu 5</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="submenu-item">
-                <a href="" class="submenu-link">text sub menu 4</a>
-              </li>
-              <li class="submenu-item">
-                <a href="" class="submenu-link">text sub menu 5</a>
-              </li>
-            </ul>
-          </li>
-          <li class="menu-item"><a href="" class="menu-link">lin 3</a></li>
-          <li class="menu-item">
-            <a href="" class="menu-link">link dfg dr 4</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <!-- <div class="container flex-parent" style="justify-content: space-between;">
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">4</div>
+    </div>
 
-    <!-- main>article.card>h2.card-title{title text}+p.card-content>lorem30 -->
-    <main>
-      <article class="card">
-        <h2 class="card-title">title text</h2>
-        <p class="card-content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quasi
-          explicabo dolores consectetur vero ut dolor ea, eos nesciunt
-          asperiores corrupti ipsum officia, repellendus beatae. Iusto, officiis
-          animi. Architecto, earum?
-        </p>
-      </article>
-      <article class="card">
-        <h2 class="card-title">title text</h2>
-        <p class="card-content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quasi
-          explicabo dolores consectetur vero ut dolor ea, eos nesciunt
-          asperiores corrupti ipsum officia, repellendus beatae. Iusto, officiis
-          animi. Architecto, earum?
-        </p>
-      </article>
-      <article class="card">
-        <h2 class="card-title">title text</h2>
-        <p class="card-content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quasi
-          explicabo dolores consectetur vero ut dolor ea, eos nesciunt
-          asperiores corrupti ipsum officia, repellendus beatae. Iusto, officiis
-          animi. Architecto, earum?
-        </p>
-      </article>
-      <article class="card">
-        <h2 class="card-title">title text</h2>
-        <p class="card-content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quasi
-          explicabo dolores consectetur vero ut dolor ea, eos nesciunt
-          asperiores corrupti ipsum officia, repellendus beatae. Iusto, officiis
-          animi. Architecto, earum?
-        </p>
-      </article>
-      <article class="card">
-        <h2 class="card-title">title text</h2>
-        <p class="card-content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quasi
-          explicabo dolores consectetur vero ut dolor ea, eos nesciunt
-          asperiores corrupti ipsum officia, repellendus beatae. Iusto, officiis
-          animi. Architecto, earum?
-        </p>
-      </article>
-    </main>
+    <div class="container flex-parent" style="justify-content: space-evenly;">
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">4</div>
+    </div> -->
+    
   </body>
 </html>
