Add margin for items

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <div class="container flex-parent">
       <div class="item">1</div>
-      <div class="item">2 </div>
-      <div class="item">3</div>
+      <div class="item margin-right-auto">2 </div>
+      <div class="item margin-top-auto">3</div>
       <div class="item">4</div>
     </div>
 
