--- a/index.html
+++ b/index.html
@@ -9,9 +9,25 @@
   <body>
     <div class="container flex-parent">
       <div class="item">1</div>
-      <div class="item margin-right-auto">2 </div>
-      <div class="item margin-top-auto">3</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
       <div class="item">4</div>
+      <div class="item">5</div>
+      <div class="item">6</div>
+      <div class="item">7</div>
+      <div class="item">8</div>
+      <div class="item">9</div>
+      <div class="item">10 lorem</div>
+      <div class="item">11</div>
+      <div class="item">12</div>
+      <div class="item">13</div>
+      <div class="item">14</div>
+      <div class="item">15</div>
+      <div class="item">16 lorem</div>
+      <div class="item">17</div>
+      <div class="item">18</div>
+      <div class="item">19</div>
+      <div class="item">20</div>
     </div>
 
     <!-- <div class="container flex-parent" style="justify-content: space-between;">
