--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="container flex-parent">
-      <div class="item">1</div>
-      <div class="item">2</div>
-      <div class="item">3</div>
-      <div class="item">4</div>
-      <div class="item">5</div>
-      <div class="item">6</div>
-      <div class="item">7</div>
-      <div class="item">8</div>
-      <div class="item">9</div>
-      <div class="item">10 lorem</div>
-      <div class="item">11</div>
-      <div class="item">12</div>
-      <div class="item">13</div>
-      <div class="item">14</div>
-      <div class="item">15</div>
-      <div class="item">16 lorem</div>
-      <div class="item">17</div>
-      <div class="item">18</div>
-      <div class="item">19</div>
-      <div class="item">20</div>
-    </div>
+  <div class="container flex-parent">
+    <div class="item flex-child">1</div>
+    <div class="item flex-child">2</div>
+    <div class="item flex-child flex-grow flex-shrink">3 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, beatae!</div>
+    <div class="item flex-child order2">4</div>
+    <div class="item flex-child">5</div>
+    <div class="item flex-child">6</div>
+    <div class="item flex-child">7</div>
+    <div class="item flex-child order-1">8</div>
+    <div class="item flex-child">9</div>
+    <div class="item flex-child">10</div>
+    <div class="item flex-child">11 Lorem ipsfdgddgdfgddgdum dolor sit amet.</div>
+    <div class="item flex-child">12</div>
+    <div class="item flex-child">13</div>
+    <div class="item flex-child">14</div>
+    <div class="item flex-child order1">15</div>
+    <div class="item flex-child">16</div>
+    <div class="item flex-child">17</div>
+    <div class="item flex-child">18</div>
+    <div class="item flex-child">19</div>
+    <div class="item flex-child">20</div> 
+  </div>
 
     <!-- <div class="container flex-parent" style="justify-content: space-between;">
       <div class="item">1</div>
