--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <form class="form" action="">
+    <form class="form" action="" >
+      
+      <input type="number" name="number1" min="0" max="100" step="10" value="50">
+      <input type="range" name="range" min="0" max="100" step="10" value="50">
+
+
+
+      <!-- method="POST" enctype="multipart/form-data" -->
+      <label for="file">choose file</label>
+      <input type="file" name="file" id="file">
+
+
       <fieldset>
         <legend>self info</legend>
         <label>
@@ -58,6 +69,7 @@
           <input type="checkbox"  name="language" value="css" checked/>
         </label>
       </fieldset>
+      
       <p>* - required field</p>
       <!-- <input type="reset" value="reset" /> -->
       <input type="submit" value="send" />
