Add transition, transform

--- a/index.html
+++ b/index.html
@@ -7,26 +7,12 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <section class="form-section">
-      <div class="form-wrapper">
-        <h1 class="form-title"><span class="oneline">Register</span></h1>
-        <p class="form-description">Create your account. It's free and only takes a minute.</p>
-        <form action="" class="form-register">
-          <div class="fullname">
-            <input type="text" name="fname" placeholder="First name">
-            <input type="text" name="lname" placeholder="Last name">
-          </div>
-          <input type="email" name="email" placeholder="Email">
-          <input type="password" name="password" placeholder="Password">
-          <input type="password" name="confirmPassword" placeholder="Confirm password">
-          <label>
-            <input type="checkbox" name="accept">
-            <span >I accept the <a href="">Terms of use</a> & <a href="">Privacy Policy</a></span>
-          </label>
-          <button type="submit" class="btn-submit oneline">register now</button>
-        </form>
-      </div>
-      <p class="login-account">Already have an account? <a href="">Sign in</a></p>
-    </section>
+    <div class="wrapper">
+      <div class="inner ease">ease</div>
+      <!-- <div class="inner linear">linear</div>
+      <div class="inner ease-in">ease-in</div>
+      <div class="inner ease-out">ease-out</div>
+      <div class="inner ease-in-out">ease-in-out</div> -->
+    </div>
   </body>
 </html>
