Add example background-image

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="inner ease">ease</div>
-      <!-- <div class="inner linear">linear</div>
-      <div class="inner ease-in">ease-in</div>
-      <div class="inner ease-out">ease-out</div>
-      <div class="inner ease-in-out">ease-in-out</div> -->
+      <div class="inner animate">animate</div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa temporibus laboriosam ad pariatur, iusto hic optio deserunt quidem illo nulla.</p>
+      <img src="./assets/images/sea.1.2496908.jpg" alt="">
     </div>
   </body>
 </html>
