Add example em & rem

--- a/index.html
+++ b/index.html
@@ -4,72 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML</title>
-    <link rel="stylesheet" href="./assets/css/animate.min.css">
     <link rel="stylesheet" href="./style.css" />
-    <!-- <link rel="stylesheet" href="./header.css" /> -->
   </head>
   <body>
-    <div class="wrapper">
-      <header class="header">
-        <div class="general-size vertical-align">
-          <a href="" class="logo">24</a>
-          <span class="search"></span>
-          <nav class="header-nav">
-            <ul class="header-nav-list">
-              <li class="header-nav-item">
-                <a href="" class="header-nav-link">Wallet</a>
-              </li>
-              <li class="header-nav-item">
-                <a href="" class="header-nav-link">Services</a>
-              </li>
-              <li class="header-nav-item">
-                <a href="" class="header-nav-link">Archive</a>
-              </li>
-              <li class="header-nav-item">
-                <a href="" class="header-nav-link">40.0 / 40.1 </a>
-              </li>
-            </ul>
-          </nav>
-          <button class="sign-in">Sign in</button>
-        </div>
-      </header>
-      <main class="main general-size">
-        <article>
-          <h1>title page</h1>
-          <div class="hero"></div>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed quas
-            id ratione, quae tenetur accusamus recusandae? Similique esse quidem
-            deleniti nisi odio sed consequatur adipisci cum cumque minus, illum
-            recusandae sapiente quas iusto explicabo quia. Libero eaque dolore
-            qui. Quam, minus pariatur recusandae ea aut voluptatem reiciendis
-            ullam blanditiis exercitationem? Inventore, voluptatum! Eveniet iste
-            porro rem perspiciatis sint nobis error consequatur in iusto facere,
-            et praesentium similique ea molestiae labore optio minima debitis
-            architecto ratione distinctio quaerat nemo libero. Fugiat
-            asperiores, nulla possimus officia quia iure dolor saepe corporis ut
-            voluptatibus expedita fugit aspernatur maxime nemo sequi unde
-            deserunt, molestias, placeat itaque ea incidunt consectetur soluta
-            sed. Odio porro nesciunt quidem. Deleniti tempora totam, nostrum
-            fugiat molestias et a voluptate debitis veritatis quos accusantium
-            doloremque placeat molestiae non aperiam earum. Beatae tempore amet
-            distinctio hic a ipsa deserunt perspiciatis, maiores minima
-            temporibus laborum neque, assumenda quas eveniet itaque et.
-            Repudiandae repellat ab suscipit officiis eaque nihil possimus
-            perferendis? Quia, animi officia porro quasi eos iste molestiae
-            eaque perferendis iusto quisquam voluptates aliquam ipsa
-            perspiciatis! Id quo iste a accusantium libero ipsam earum eveniet,
-            obcaecati autem sed qui iure. Aut ipsam laudantium magnam at
-            voluptate unde in velit aliquid quos praesentium!
-          </p>
-        </article>
-      </main>
-      <div class="btn-chat"></div>
-      <div class="chat">
-        <h3>Privat 24</h3>
-        <p>Online help</p>
-      </div>
-      <footer class="footer">2024</footer>
-    </div>
+   <ul>
+    <li><a href="">link 1</a></li>
+    <li><a href="">link 2</a></li>
+    <li><a href="">link 3</a></li>
+    <li><a href="">link 4</a></li>
+   </ul>
   </body>
 </html>
