--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/fonts.css">
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -13,5 +15,11 @@
     <li><a href="">link 3</a></li>
     <li><a href="">link 4</a></li>
    </ul>
+<blockquote>qwerty</blockquote>
+   <h1>text 1</h1>
+   <h2>text 2</h2>
+   <h3>text 3</h3>
+   <h4>text 4</h4>
+   <h5>text 5</h5>
   </body>
 </html>
