--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="myreset.css">
     <link rel="stylesheet" href="./assets/css/fonts.css">
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./assets/css/print.css" media="print">
+    <link rel="stylesheet" href="./assets/css/screen.css" media="screen">
+    <link rel="stylesheet" href="./assets/css/common.css" media="all">
   </head>
   <body>
+    <div class="print-logo">print logo</div>
    <ul>
     <li><a href="">link 1</a></li>
     <li><a href="">link 2</a></li>
