--- a/index.html
+++ b/index.html
@@ -4,27 +4,106 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML</title>
-    <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="myreset.css">
-    <link rel="stylesheet" href="./assets/css/fonts.css">
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./assets/css/print.css" media="print">
-    <link rel="stylesheet" href="./assets/css/screen.css" media="screen">
-    <link rel="stylesheet" href="./assets/css/common.css" media="all">
+    <link rel="stylesheet" href="./assets/css/article.css" />
   </head>
   <body>
-    <div class="print-logo">print logo</div>
-   <ul>
-    <li><a href="">link 1</a></li>
-    <li><a href="">link 2</a></li>
-    <li><a href="">link 3</a></li>
-    <li><a href="">link 4</a></li>
-   </ul>
-<blockquote>qwerty</blockquote>
-   <h1>text 1</h1>
-   <h2>text 2</h2>
-   <h3>text 3</h3>
-   <h4>text 4</h4>
-   <h5>text 5</h5>
+    <section class="section">
+      <article class="article">
+        <h2 class="article-title">Title article</h2>
+        <img class="article-pic" src="./assets/images/sea.1.2496908.jpg" alt="sea">
+        <p class="article-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur,
+          sapiente!
+        </p>
+        <p class="article-content">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo
+          adipisci, commodi recusandae ducimus aliquam impedit doloribus
+          officiis maxime quam sequi?
+        </p>
+        <p class="article-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fuga
+          dolorum sed? Sequi deserunt itaque iure unde numquam doloremque ea
+          laudantium labore perferendis sunt. A molestiae perferendis aperiam
+          quod modi?
+        </p>
+      </article>
+      <article class="article">
+        <h2 class="article-title">Title article</h2>
+        <img class="article-pic" src="./assets/images/sea.1.2496908.jpg" alt="sea">
+        <p class="article-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur,
+          sapiente!
+        </p>
+        <p class="article-content">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo
+          adipisci, commodi recusandae ducimus aliquam impedit doloribus
+          officiis maxime quam sequi?
+        </p>
+        <p class="article-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fuga
+          dolorum sed? Sequi deserunt itaque iure unde numquam doloremque ea
+          laudantium labore perferendis sunt. A molestiae perferendis aperiam
+          quod modi?
+        </p>
+      </article>
+      <article class="article">
+        <h2 class="article-title">Title article</h2>
+        <img class="article-pic" src="./assets/images/sea.1.2496908.jpg" alt="sea">
+        <p class="article-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur,
+          sapiente!
+        </p>
+        <p class="article-content">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo
+          adipisci, commodi recusandae ducimus aliquam impedit doloribus
+          officiis maxime quam sequi?
+        </p>
+        <p class="article-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fuga
+          dolorum sed? Sequi deserunt itaque iure unde numquam doloremque ea
+          laudantium labore perferendis sunt. A molestiae perferendis aperiam
+          quod modi?
+        </p>
+      </article>
+      <article class="article">
+        <h2 class="article-title">Title article</h2>
+        <img class="article-pic" src="./assets/images/sea.1.2496908.jpg" alt="sea">
+        <p class="article-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur,
+          sapiente!
+        </p>
+        <p class="article-content">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo
+          adipisci, commodi recusandae ducimus aliquam impedit doloribus
+          officiis maxime quam sequi?
+        </p>
+        <p class="article-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fuga
+          dolorum sed? Sequi deserunt itaque iure unde numquam doloremque ea
+          laudantium labore perferendis sunt. A molestiae perferendis aperiam
+          quod modi?
+        </p>
+      </article>
+      <article class="article">
+        <h2 class="article-title">Title article</h2>
+        <img class="article-pic" src="./assets/images/sea.1.2496908.jpg" alt="sea">
+        <p class="article-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur,
+          sapiente!
+        </p>
+        <p class="article-content">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo
+          adipisci, commodi recusandae ducimus aliquam impedit doloribus
+          officiis maxime quam sequi?
+        </p>
+        <p class="article-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fuga
+          dolorum sed? Sequi deserunt itaque iure unde numquam doloremque ea
+          laudantium labore perferendis sunt. A molestiae perferendis aperiam
+          quod modi?
+        </p>
+      </article>
+    </section>
   </body>
 </html>
